[package]
name = "trustless-verify"
version = "0.1.0"
edition = "2021"
rust-version = "1.73.0"
authors = ["Bradly Biron Baker Adams <brad@tigantic.com>"]
description = "Standalone Trustless Physics Certificate verifier — air-gapped compatible"
license = "LicenseRef-Proprietary"
keywords = ["zk", "trustless-physics", "verifier", "certificate"]

[[bin]]
name = "trustless-verify"
path = "src/main.rs"

[dependencies]
# Core dependencies only — minimal for air-gapped deployment
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
byteorder = "1.5"
uuid = { version = "1.7", features = ["v4"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
