[package]
name = "fluidelite-circuits"
version = "0.1.0"
edition = "2021"
rust-version = "1.73.0"
authors = ["Bradly Biron Baker Adams <brad@tigantic.com>"]
description = "Physics ZK circuits for FluidElite: Euler 3D, Navier-Stokes IMEX, Thermal diffusion, Proof Preview"
license = "LicenseRef-Proprietary"
repository = "https://github.com/tigantic/FluidElite"
keywords = ["zk", "cfd", "euler", "navier-stokes", "thermal"]
categories = ["cryptography", "science"]

[lib]
name = "fluidelite_circuits"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Core tensor primitives
fluidelite-core = { path = "../fluidelite_core" }

# Numerics
num-traits = "0.2"

# Hashing
sha2 = "0.10"

# Random (for testing/witness generation)
rand = "0.8"

# Winterfell STARK proving backend (Goldilocks field, FRI commitment, no trusted setup)
winterfell = { version = "0.13.1", optional = true, features = ["concurrent"] }

# winter-air for proof::Queries (used by GPU TraceLde implementation)
winter-air = { version = "0.13", optional = true }

# GPU acceleration (ICICLE v4 — Ingonyama) for STARK NTT on Goldilocks field
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v4.0.0", optional = true }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v4.0.0", optional = true }
icicle-goldilocks = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v4.0.0", optional = true }

# Logging
tracing = { version = "0.1", optional = true }

[features]
default = []
stark = ["dep:winterfell"]
gpu-stark = ["stark", "dep:winter-air", "dep:icicle-runtime", "dep:icicle-core", "dep:icicle-goldilocks", "dep:tracing"]

[dev-dependencies]
proptest = "1.4"
