[package]
name = "fluidelite-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.73.0"
authors = ["Bradly Biron Baker Adams <brad@tigantic.com>"]
description = "Core tensor primitives for FluidElite ZK: Q16 field, MPS, MPO, operators, physics traits"
license = "LicenseRef-Proprietary"
repository = "https://github.com/tigantic/FluidElite"
keywords = ["tensor-network", "fixed-point", "mps", "mpo", "qtt"]
categories = ["science", "mathematics"]

[lib]
name = "fluidelite_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Numerics (fixed-point for ZK)
fixed = "1.23"
num-traits = "0.2"

# Hashing
sha2 = "0.10"

# Random (for testing/benchmarks)
rand = "0.8"

# Encryption for enterprise weight protection (AES-256-GCM)
aes-gcm = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }
getrandom = { version = "0.3", optional = true }

# Constant-time comparison
subtle = "2.5"

# Halo2 support for field conversions (optional)
halo2-axiom = { version = "0.5.1", optional = true }

[features]
default = []
halo2 = ["dep:halo2-axiom"]
encryption = ["dep:aes-gcm", "dep:hkdf", "dep:getrandom"]

[dev-dependencies]
proptest = "1.4"
