[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "fluidelite-zk"
version = "0.1.0"
description = "ZK-provable FluidElite inference using Halo2"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["zk", "halo2", "tensor-network", "machine-learning", "verifiable-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "maturin>=1.4",
]

[project.urls]
Homepage = "https://github.com/TiganticLabz/HyperTensor-VM"
Documentation = "https://github.com/TiganticLabz/HyperTensor-VM#readme"
Repository = "https://github.com/TiganticLabz/HyperTensor-VM"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "fluidelite_zk"
