[package]
name = "hyper_bridge"
version = "0.1.0"
edition = "2021"
authors = ["TiganticLabz <dev@tigantic.com>"]
description = "RAM Bridge IPC protocol for Python ↔ Rust tensor streaming"
license = "MIT"
rust-version = "1.75"

[dependencies]
# Shared Memory IPC
memmap2.workspace = true
shared_memory.workspace = true

# Serialization  
bytemuck.workspace = true
crc.workspace = true

# Error Handling
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.9"

[features]
default = []
