[package]
name = "ontic_gpu_py"
version = "0.1.0"
edition = "2021"
authors = ["TiganticLabz <dev@tigantic.com>"]
description = "PyO3 bindings for Ontic Engine GPU acceleration (CUDA 97M queries/sec)"
license = "LicenseRef-Proprietary"
rust-version = "1.75"

[lib]
name = "ontic_gpu_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.24", features = ["extension-module"] }

# Numpy interop
numpy = "0.24"

# The actual GPU implementation - optional
ontic_core = { path = "../ontic_core", optional = true }

# Error handling
thiserror = "1.0"

[features]
default = []
gpu = ["ontic_core"]
