[package]
name = "cem-qtt"
version = "0.1.0"
edition = "2021"
authors = ["Brad McAllister"]
description = "Computational Electromagnetics via Quantized Tensor Train compression — FDTD Maxwell solver in Q16.16 fixed-point with MPS/MPO tensor networks"
license = "Proprietary"

[dependencies]

[dev-dependencies]

[[test]]
name = "integration"
path = "tests/integration.rs"
